objects/ContractHistory__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Extension_Authorization_Type__c</fullName>
        <label>Contract Extension Authorization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Both Parties Written Approval</fullName>
                    <color>#FFFFFF</color>
                    <label>Both Parties Written Approval</label>
                </value>
                <value>
                    <fullName>Customer Written Approval</fullName>
                    <color>#FFFFFF</color>
                    <label>Customer Written Approval</label>
                </value>
                <value>
                    <fullName>No Written Approval Required</fullName>
                    <color>#FFFFFF</color>
                    <label>No Written Approval Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Extensions__c</fullName>
        <label>Contract Extensions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Need validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                    <color>#FFFFFF</color>
                    <label>Evergreen</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Lifecycle_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Lifecycle Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts11554724633</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Contract__r.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <label>Contract Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthony Falbo</fullName>
                </value>
                <value>
                    <fullName>Jean Davis</fullName>
                </value>
                <value>
                    <fullName>Denise DeFerrari</fullName>
                </value>
                <value>
                    <fullName>Pricing Compliance Queue</fullName>
                    <default>true</default>
                    <label>Pricing Compliance Queue</label>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_State_Minimum_Order__c</fullName>
        <label>Contract say charge Min Order Value fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#FFFFFF</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                    <color>#FFFFFF</color>
                    <label>Closed/Cancelled</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <color>#FFFFFF</color>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <color>#FFFFFF</color>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                    <color>#FFFFFF</color>
                    <label>1 Year</label>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>2 Years</label>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>3 Years</label>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>4 Years</label>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                    <color>#FFFFFF</color>
                    <label>5 Years</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>ALL PRODUCTS</fullName>
                    <color>#FFFFFF</color>
                    <label>ALL PRODUCTS</label>
                </value>
                <value>
                    <fullName>CBS</fullName>
                    <color>#FFFFFF</color>
                    <label>CBS</label>
                </value>
                <value>
                    <fullName>CPD-PRINT</fullName>
                    <color>#FFFFFF</color>
                    <label>CPD-PRINT</label>
                </value>
                <value>
                    <fullName>DEVIATED PRICING</fullName>
                    <color>#FFFFFF</color>
                    <label>DEVIATED PRICING</label>
                </value>
                <value>
                    <fullName>FURNITURE</fullName>
                    <color>#FFFFFF</color>
                    <label>FURNITURE</label>
                </value>
                <value>
                    <fullName>MPS</fullName>
                    <color>#FFFFFF</color>
                    <label>MPS</label>
                </value>
                <value>
                    <fullName>OFFICE SUPPLIES</fullName>
                    <color>#FFFFFF</color>
                    <label>OFFICE SUPPLIES</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <color>#FFFFFF</color>
                    <label>OTHER</label>
                </value>
                <value>
                    <fullName>PAPER</fullName>
                    <color>#FFFFFF</color>
                    <label>PAPER</label>
                </value>
                <value>
                    <fullName>Partner Compensation Agreement</fullName>
                    <color>#FFFFFF</color>
                    <label>Partner Compensation Agreement</label>
                </value>
                <value>
                    <fullName>SCHOOL SUPPLIES</fullName>
                    <color>#FFFFFF</color>
                    <label>SCHOOL SUPPLIES</label>
                </value>
                <value>
                    <fullName>TECHNOLOGY</fullName>
                    <color>#FFFFFF</color>
                    <label>TECHNOLOGY</label>
                </value>
                <value>
                    <fullName>PROPRIETARY CONTRACT</fullName>
                    <color>#FFFFFF</color>
                    <label>PROPRIETARY CONTRACT</label>
                </value>
                <value>
                    <fullName>CPD-PROMO</fullName>
                    <color>#FFFFFF</color>
                    <label>CPD-PROMO</label>
                </value>
                <value>
                    <fullName>REBATES ONLY</fullName>
                    <color>#FFFFFF</color>
                    <label>REBATES ONLY</label>
                </value>
                <value>
                    <fullName>NO CONTRACT- ADD DOCUMENTS TO REPOSITORY</fullName>
                    <color>#FFFFFF</color>
                    <label>NO CONTRACT- ADD DOCUMENTS TO REPOSITORY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract History</relationshipLabel>
        <relationshipName>Contract_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_allow_for_dependent_pricing_rel__c</fullName>
        <description>Does the contract allow for dependent pricing relationships?</description>
        <label>Contract allow for dependent pricing rel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Upon request</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_cost__c</fullName>
        <label>Contract cost $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_cover_NonCore_Cat_setup_pricing__c</fullName>
        <label>Contract cover NonCore Cat setup/pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_data_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract data verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_have_req_for_prop_items__c</fullName>
        <label>Does contract specify proprietary items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_on_Office_Depot_or_custom_paper__c</fullName>
        <inlineHelpText>Contract on Office Depot or custom paper?</inlineHelpText>
        <label>Contract on Office Depot or custom paper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Office Depot</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_Restocking_Fees_excluded__c</fullName>
        <label>Contract state Restocking Fees excluded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                    <color>#FFFFFF</color>
                    <label>Standard BSD terms</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_a_Small_Order_Fee_charge__c</fullName>
        <label>Contract state a Small Order Fee charge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_a_furniture_delivery_fee__c</fullName>
        <label>Contract state a furniture delivery fee?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Compulsory</label>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes - Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Spend_Volume_Threshold_for_Pricing__c</fullName>
        <label>Core Spend Volume Threshold for Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_of_annual_volume__c</fullName>
        <label>Core % of annual volume</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Language_included_in_agreement__c</fullName>
        <label>Cost Language included in agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Plus_Floor_Type__c</fullName>
        <label>Cost Plus / Floor Pricing Applied to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                    <color>#FFFFFF</color>
                    <label>Core</label>
                </value>
                <value>
                    <fullName>NCC</fullName>
                    <color>#FFFFFF</color>
                    <label>NCC</label>
                </value>
                <value>
                    <fullName>Off-Contract</fullName>
                    <color>#FFFFFF</color>
                    <label>Off-Contract</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_basis__c</fullName>
        <label>Cost basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>TDC</fullName>
                    <color>#FFFFFF</color>
                    <label>TDC</label>
                </value>
                <value>
                    <fullName>WAPO</fullName>
                    <color>#FFFFFF</color>
                    <label>WAPO</label>
                </value>
                <value>
                    <fullName>Net</fullName>
                    <color>#FFFFFF</color>
                    <label>Net</label>
                </value>
                <value>
                    <fullName>PO</fullName>
                    <color>#FFFFFF</color>
                    <label>PO</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract silent</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Fee_Subcomponent_Within_Part__c</fullName>
        <inlineHelpText>Credit Card Fee Subcomponent Within Partner Gross Compensation (%)</inlineHelpText>
        <label>Credit Card Fee Subcomponent Within PGC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Legacy_Max_Agreement__c</fullName>
        <label>Current Legacy Max Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <color>#FFFFFF</color>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <color>#FFFFFF</color>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_1__c</fullName>
        <label>Current contract expiration date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_2__c</fullName>
        <label>Current contract expiration date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_3__c</fullName>
        <label>Current contract expiration date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_change_Pricing_on_GP_Core__c</fullName>
        <label>Cust Notif to change Pricing on GP Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Not Required</label>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_change_Pricingon_Standalon__c</fullName>
        <label>Cust Notif to change Pricingon Standalon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Not Required</label>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_chg_Pricing_on_Child_Core__c</fullName>
        <label>Cust Notif to chg Pricing on Child Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Not Required</label>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_chg_Pricing_on_Par_Core__c</fullName>
        <label>Cust Notif to chg Pricing on Par Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Not Required</label>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                    <color>#FFFFFF</color>
                    <label>Notification Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_notif_to_chg_Cust_NonCore_Cat_Prcin__c</fullName>
        <label>Cust notif to chg Cust NonCore Cat Prcin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Non_Core_Catalog_Discount_Basis__c</fullName>
        <label>Custom Non-Core Catalog Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>Contract Silent</label>
                </value>
                <value>
                    <fullName>List Less</fullName>
                    <color>#FFFFFF</color>
                    <label>List Less</label>
                </value>
                <value>
                    <fullName>WAPO Mark-Up</fullName>
                    <color>#FFFFFF</color>
                    <label>WAPO Mark-Up</label>
                </value>
                <value>
                    <fullName>Web Less</fullName>
                    <color>#FFFFFF</color>
                    <label>Web Less</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Non_Core_Catalog__c</fullName>
        <label>Custom Non-Core Catalog?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                    <color>#FFFFFF</color>
                    <label>No/Contract Silent</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_core_item_count__c</fullName>
        <label>Custom core item count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_core_written_agreement_language__c</fullName>
        <label>Custom core written agreement language</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_items_must_from_specific_formular__c</fullName>
        <label>Custom items must from specific formular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>